--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,8 +64,9 @@ html, body {
 /* Mobile responsiveness for buttons */
 @media (max-width: 768px) {
   .cta-button {
-    padding: 0.4rem 1.3rem;     /* Adjust padding for smaller buttons */
-    font-size: 1rem;             /* Make font size smaller */
+    padding: 0.9rem 1.9rem;     /* Adjust padding for smaller buttons */
+    font-size: 1rem;            /* Make font size smaller */
+    width: 60%;
   }
 }
 
