--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -66,7 +66,7 @@ html, body {
   .cta-button {
     padding: 0.9rem 1.9rem;     /* Adjust padding for smaller buttons */
     font-size: 1rem;            /* Make font size smaller */
-    width: 60%;
+    width:384px;
   }
 }
 
